Bug 476505 - Masked Opacity/Flow are not enabled on old brushes
Summary: Masked Opacity/Flow are not enabled on old brushes
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: 5.2.1
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: regression, release_blocker
: 477151 477828 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-11-03 13:39 UTC by Freya Lupen
Modified: 2023-12-01 11:24 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
WaterC Basic Round-Grain versions comparsion (44.72 KB, image/png)
2023-11-03 13:39 UTC, Freya Lupen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Freya Lupen 2023-11-03 13:39:25 UTC
Created attachment 162840 [details]
WaterC Basic Round-Grain versions comparsion

SUMMARY
In 5.2.1, Masked Opacity and Masked Flow aren't enabled on existing brushes by default, only if it's manually enabled and resaved. This affects the behavior of the default brush "j) WaterC Basic Round-Grain" as shown in the attached image, as well as other brushes like Ramon's "inkP 06 Dip Pen Diluted".

STEPS TO REPRODUCE
1. Try to use a brush that makes use of Masked Opacity or Masked Flow, such as "j) WaterC Basic Round-Grain".

OBSERVED RESULT
The brush behaves differently, with no Masked Opacity/Flow.

EXPECTED RESULT
The brush behaves as before, using Masked Opacity/Flow.

SOFTWARE/OS VERSIONS
Krita 5.2.1
Comment 1 Dmitry Kazakov 2023-11-03 16:49:42 UTC
Git commit 81161814ad4f646ae8c456a349128751d8e0b825 by Dmitry Kazakov.
Committed on 03/11/2023 at 17:49.
Pushed by dkazakov into branch 'master'.

Disable checkability of Opacity and Flow options for Masked Brushes

They were uncheckable before Krita 5.2.0, so we should keep them this
way. That is a proper fix for the incorrect fix for bug 476076.
Related: bug 476076

M  +1    -1    plugins/paintops/defaultpaintops/brush/kis_brushop_settings_widget.cpp
M  +2    -2    plugins/paintops/libpaintop/KisStandardOptionData.h

https://invent.kde.org/graphics/krita/-/commit/81161814ad4f646ae8c456a349128751d8e0b825
Comment 2 Dmitry Kazakov 2023-11-03 16:49:59 UTC
Git commit f49342bc1cc2bc968ae5b1176583716713aa6359 by Dmitry Kazakov.
Committed on 03/11/2023 at 17:49.
Pushed by dkazakov into branch 'krita/5.2'.

Disable checkability of Opacity and Flow options for Masked Brushes

They were uncheckable before Krita 5.2.0, so we should keep them this
way. That is a proper fix for the incorrect fix for bug 476076.
Related: bug 476076

M  +1    -1    plugins/paintops/defaultpaintops/brush/kis_brushop_settings_widget.cpp
M  +2    -2    plugins/paintops/libpaintop/KisStandardOptionData.h

https://invent.kde.org/graphics/krita/-/commit/f49342bc1cc2bc968ae5b1176583716713aa6359
Comment 3 Reine 2023-11-20 11:13:33 UTC
*** Bug 477151 has been marked as a duplicate of this bug. ***
Comment 4 Dmitry Kazakov 2023-12-01 11:24:24 UTC
*** Bug 477828 has been marked as a duplicate of this bug. ***