Disable checkability of Opacity and Flow options for Masked Brushes

They were uncheckable before Krita 5.2.0, so we should keep them this
way. That is a proper fix for the incorrect fix for bug 476076.

BUG:476505
BUG:476076