plugins/paintops/defaultpaintops/brush/kis_brushop_settings_widget.cpp
@@ -80,8 +80,8 @@ KisBrushOpSettingsWidget::KisBrushOpSettingsWidget(QWidget* parent, KisResources
     addPaintOpOption(maskingOption);
 
     addPaintOpOption(kpowu::createMaskingOpacityOptionWidget());
-    addPaintOpOption(kpowu::createOptionWidget<KisSizeOptionWidget>(KisSizeOptionData(KisPaintOpUtils::MaskingBrushPresetPrefix), KisPaintOpOption::MASKING_BRUSH));
     addPaintOpOption(kpowu::createMaskingFlowOptionWidget());
+    addPaintOpOption(kpowu::createOptionWidget<KisSizeOptionWidget>(KisSizeOptionData(KisPaintOpUtils::MaskingBrushPresetPrefix), KisPaintOpOption::MASKING_BRUSH));
     addPaintOpOption(kpowu::createMaskingRatioOptionWidget());
     addPaintOpOption(kpowu::createMaskingRotationOptionWidget());
     addPaintOpOption(kpowu::createOptionWidget<KisMirrorOptionWidget>(KisMirrorOptionData(KisPaintOpUtils::MaskingBrushPresetPrefix), KisPaintOpOption::MASKING_BRUSH));
